oneclick-monitoring-VPC-end/terraform/launch_template.tf
resource "aws_launch_template" "monitoring_lt" {
  name_prefix   = "lt-${var.project}-"
  image_id      = data.aws_ami.ubuntu.id
  instance_type = var.instance_type_monitoring

  iam_instance_profile {
    name = "ec2-ssm-profile"
  }

  vpc_security_group_ids = [
    aws_security_group.private_ec2_sg.id
  ]

  tag_specifications {
    resource_type = "instance"

    tags = {
      Name    = "monitoring-instance"
      Role    = var.role
      Project = var.project
    }
  }
}
